--- a/stundent_architect_service/.gitignore
+++ b/stundent_architect_service/.gitignore
@@ -1,5 +1,7 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+/bin/
 
 ### STS ###
 .apt_generated
@@ -15,10 +17,10 @@
 *.iws
 *.iml
 *.ipr
+/out/
 
 ### NetBeans ###
 /nbproject/private/
-/build/
 /nbbuild/
 /dist/
 /nbdist/
