--- a/stundent_architect_service/build.gradle
+++ b/stundent_architect_service/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile('mysql:mysql-connector-java')
+	//compile('org.projectlombok:lombok')
 	compile(group:'com.github.paulcwarren',name:'spring-content-fs-boot-starter',version:'0.2.0')
 	compile(group:'com.github.paulcwarren',name:'spring-content-rest-boot-starter',version:'0.2.0')
 	runtime('org.springframework.boot:spring-boot-devtools')
