Add Standard Entity and related actions

--- a/stundent_architect_service/src/main/resources/application.properties
+++ b/stundent_architect_service/src/main/resources/application.properties
@@ -17,3 +17,6 @@ logging.level.org.hibernate.SQL= DEBUG
 ## Jackson Properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
 spring.jackson.time-zone= UTC
+
+## Spring Rest Properties
+spring.hateoas.use-hal-as-default-json-media-type=false
