--- a/stundent_architect_service/src/main/resources/application.properties
+++ b/stundent_architect_service/src/main/resources/application.properties
@@ -3,13 +3,15 @@ server.port= 8080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+#jdbc:mysql://35.200.141.88:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=password
+spring.datasource.initialization-mode=embedded
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 ## Hibernate Logging
 logging.level.org.hibernate.SQL= DEBUG
@@ -20,3 +22,14 @@ spring.jackson.time-zone= UTC
 
 ## Spring Rest Properties
 spring.hateoas.use-hal-as-default-json-media-type=false
+
+## H2 In memory DB properties
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enabling H2 Console
+#spring.h2.console.enabled=true
