--- a/stundent_architect_service/src/main/resources/application.properties
+++ b/stundent_architect_service/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port= 8080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
-#jdbc:mysql://35.200.141.88:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://35.200.141.88:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.initialization-mode=embedded
