--- a/stundent_architect_service/src/main/resources/application.properties
+++ b/stundent_architect_service/src/main/resources/application.properties
@@ -3,9 +3,12 @@ server.port= 8090
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:mysql://localhost:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.url=jdbc:mysql://35.200.141.88:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://35.200.141.88:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://ec2-13-127-173-37.ap-south-1.compute.amazonaws.com:3306/student_architect_service?useSSL=false&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.username=root
+#spring.datasource.password=password
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.initialization-mode=embedded
 
 ## Hibernate Properties
